--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Номенклатура.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Номенклатура.designer.cs">
+      <DependentUpon>Form_Номенклатура.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_НоменклатураЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_НоменклатураЕлемент.designer.cs">
+      <DependentUpon>Form_НоменклатураЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Організації.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +145,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Номенклатура.resx">
+      <DependentUpon>Form_Номенклатура.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_НоменклатураЕлемент.resx">
+      <DependentUpon>Form_НоменклатураЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_Організації.resx">
       <DependentUpon>Form_Організації.cs</DependentUpon>
