--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_Склади.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_Склади.designer.cs">
+      <DependentUpon>Form_Склади.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_СкладиЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_СкладиЕлемент.designer.cs">
+      <DependentUpon>Form_СкладиЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Контрагенти.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -157,6 +169,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_Склади.resx">
+      <DependentUpon>Form_Склади.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_СкладиЕлемент.resx">
+      <DependentUpon>Form_СкладиЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_Контрагенти.resx">
       <DependentUpon>Form_Контрагенти.cs</DependentUpon>
