--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_ВидиЦін.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_ВидиЦін.designer.cs">
+      <DependentUpon>Form_ВидиЦін.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form_ВидиЦінЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_ВидиЦінЕлемент.designer.cs">
+      <DependentUpon>Form_ВидиЦінЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Склади.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -169,6 +181,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_ВидиЦін.resx">
+      <DependentUpon>Form_ВидиЦін.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_ВидиЦінЕлемент.resx">
+      <DependentUpon>Form_ВидиЦінЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_Склади.resx">
       <DependentUpon>Form_Склади.cs</DependentUpon>
