--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\Form_ВидиНоменклатури.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_ВидиНоменклатури.designer.cs">
+      <DependentUpon>Form_ВидиНоменклатури.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Довідники\Form_ВидиНоменклатуриЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_ВидиНоменклатуриЕлемент.designer.cs">
+      <DependentUpon>Form_ВидиНоменклатуриЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Довідники\Form_Виробники.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -217,6 +229,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_ВидиНоменклатури.resx">
+      <DependentUpon>Form_ВидиНоменклатури.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_ВидиНоменклатуриЕлемент.resx">
+      <DependentUpon>Form_ВидиНоменклатуриЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_Виробники.resx">
       <DependentUpon>Form_Виробники.cs</DependentUpon>
