--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиОрганізацій.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиОрганізацій.designer.cs">
+      <DependentUpon>Form_БанківськіРахункиОрганізацій.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.designer.cs">
+      <DependentUpon>Form_БанківськіРахункиОрганізаційЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Довідники\Form_СтруктураПідприємства.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -241,6 +253,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_БанківськіРахункиОрганізацій.resx">
+      <DependentUpon>Form_БанківськіРахункиОрганізацій.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.resx">
+      <DependentUpon>Form_БанківськіРахункиОрганізаційЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_СтруктураПідприємства.resx">
       <DependentUpon>Form_СтруктураПідприємства.cs</DependentUpon>
