--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,11 +69,23 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиКонтрагентів.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиКонтрагентів.designer.cs">
+      <DependentUpon>Form_БанківськіРахункиКонтрагентів.cs</DependentUpon>
+    </Compile>
     <Compile Include="Довідники\Form_БанківськіРахункиОрганізацій.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Довідники\Form_БанківськіРахункиОрганізацій.designer.cs">
       <DependentUpon>Form_БанківськіРахункиОрганізацій.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиКонтрагентівЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\Form_БанківськіРахункиКонтрагентівЕлемент.designer.cs">
+      <DependentUpon>Form_БанківськіРахункиКонтрагентівЕлемент.cs</DependentUpon>
     </Compile>
     <Compile Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.cs">
       <SubType>Form</SubType>
@@ -266,8 +278,14 @@
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_БанківськіРахункиКонтрагентів.resx">
+      <DependentUpon>Form_БанківськіРахункиКонтрагентів.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_БанківськіРахункиОрганізацій.resx">
       <DependentUpon>Form_БанківськіРахункиОрганізацій.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\Form_БанківськіРахункиКонтрагентівЕлемент.resx">
+      <DependentUpon>Form_БанківськіРахункиКонтрагентівЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.resx">
       <DependentUpon>Form_БанківськіРахункиОрганізаційЕлемент.cs</DependentUpon>
