--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -96,6 +96,12 @@
     <Compile Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.designer.cs">
       <DependentUpon>Form_БанківськіРахункиОрганізаційЕлемент.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_ЗамовленняКлієнтаЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_ЗамовленняКлієнтаЕлемент.designer.cs">
+      <DependentUpon>Form_ЗамовленняКлієнтаЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Довідники\Form_ХарактеристикиНоменклатури.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -307,6 +313,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_БанківськіРахункиОрганізаційЕлемент.resx">
       <DependentUpon>Form_БанківськіРахункиОрганізаційЕлемент.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_ЗамовленняКлієнтаЕлемент.resx">
+      <DependentUpon>Form_ЗамовленняКлієнтаЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Довідники\Form_ХарактеристикиНоменклатури.resx">
       <DependentUpon>Form_ХарактеристикиНоменклатури.cs</DependentUpon>
