--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -290,6 +290,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Документи\ЗамовленняКлієнта_ТабличнаЧастина_Товари.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Документи\ЗамовленняКлієнта_ТабличнаЧастина_Товари.Designer.cs">
+      <DependentUpon>ЗамовленняКлієнта_ТабличнаЧастина_Товари.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ConfigurationSelectionForm.resx">
       <DependentUpon>ConfigurationSelectionForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -423,6 +429,9 @@
     <Compile Include="Документи\Form_ЗамовленняКлієнтаЖурнал.cs">
       <SubType>Form</SubType>
     </Compile>
+    <EmbeddedResource Include="Документи\ЗамовленняКлієнта_ТабличнаЧастина_Товари.resx">
+      <DependentUpon>ЗамовленняКлієнта_ТабличнаЧастина_Товари.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
