--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DirectoryControl.designer.cs">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Документи\Form_РеалізаціяТоварівТаПослуг_ТабличнаЧастина_Товари.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Документи\Form_РеалізаціяТоварівТаПослуг_ТабличнаЧастина_Товари.Designer.cs">
+      <DependentUpon>Form_РеалізаціяТоварівТаПослуг_ТабличнаЧастина_Товари.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Документи\Form_РеалізаціяТоварівТаПослугДокумент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Документи\Form_РеалізаціяТоварівТаПослугДокумент.designer.cs">
+      <DependentUpon>Form_РеалізаціяТоварівТаПослугДокумент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Документи\Form_РеалізаціяТоварівТаПослугЖурнал.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -310,6 +322,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Документи\Form_РеалізаціяТоварівТаПослуг_ТабличнаЧастина_Товари.resx">
+      <DependentUpon>Form_РеалізаціяТоварівТаПослуг_ТабличнаЧастина_Товари.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Документи\Form_РеалізаціяТоварівТаПослугДокумент.resx">
+      <DependentUpon>Form_РеалізаціяТоварівТаПослугДокумент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Документи\Form_РеалізаціяТоварівТаПослугЖурнал.resx">
       <DependentUpon>Form_РеалізаціяТоварівТаПослугЖурнал.cs</DependentUpon>
